Changed account to polski-duo-notes and removed instances of my name and ex

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - Home
+title: Polski Duo Notes - Home
 ---
 
 <div class="blurb">
@@ -11,10 +11,10 @@ title: Elisa's Duo Polski - Home
         <h1 style="width:100%;text-align:center;display:block;">Polish Language</h1>
     </div>
     <div class="emphasis-white">
-        <h3> Elisa's Duolingo Polish course notes</h3>
+        <h3> Duolingo Polish course notes</h3>
         <p>Original Post: <a href="https://forum.duolingo.com/comment/34799185">https://forum.duolingo.com/comment/34799185</a></p>
         
-        <p>I am making this Polish learning guide maintaining the helpful and intuitive lesson order of the Duolingo Polish courses, although adding from other guides online, dictionaries and asking around on the forums. Duolingo is great for learning through repetition, but for the most part the grammar is not explained explicitly. So I decided to put all my notes in here.</p>
+        <p>Hi, I'm Claire, a Mexican girl learning Polish. I am making this Polish learning guide maintaining the helpful and intuitive lesson order of the Duolingo Polish courses, although adding from other guides online, dictionaries and asking around on the forums. Duolingo is great for learning through repetition, but for the most part the grammar is not explained explicitly. So I decided to put all my notes in here.</p>
 
         <p>Navigation (you can also click the menu on the top left)</p>
     
