--- a/lessons/checkpoint_1/15_present_2.html
+++ b/lessons/checkpoint_1/15_present_2.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - Present 2
+title: Polski Duo Notes - Present 2
 ---
 
 <div class="blurb">
@@ -140,7 +140,7 @@ title: Elisa's Duo Polski - Present 2
 
         <p>Notice the nouns and pronouns in <span class="red-text">genitive</span>. Apparently for native Polish people, it’s a common mistake to use potrzebować with accusative, but we should learn the correct form here. 
 
-        I tried this with my Polish girlfriend: Potrzebujesz herbaty? - Do you need tea? And she applauded my progress, but told me that needing something is stronger than wanting something, so it sounded weird to be asked that as a question. It seems that it's not a direct translation of offering something "Do you need something?" as opposed to "Would you like something?".</p>
+        I tried this with a Polish girl: Potrzebujesz herbaty? - Do you need tea? And she applauded my progress, but told me that needing something is stronger than wanting something, so it sounded weird to be asked that as a question. It seems that it's not a direct translation of offering something "Do you need something?" as opposed to "Would you like something?".</p>
 
         
         <span class="section">Słuchać</span>
