--- a/lessons/checkpoint_2/17_colors.html
+++ b/lessons/checkpoint_2/17_colors.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - Colors
+title: Polski Duo Notes - Colors
 ---
 
 <div class="blurb">
@@ -115,7 +115,7 @@ title: Elisa's Duo Polski - Colors
         </table></div>
 
         <p>* Not in the lesson, but interesting. It also is the name of the national coin of Poland.
-        ** Not in the lesson, but my girlfriend taught me this one. Many fruits are green when they are unripe, and so these two concepts coincide in Polish. As a note, they also do in Spanish and Japanese (well, except in Japanese they say blue for this concept).</p>
+        ** Not in the lesson, but someone taught me this one. Many fruits are green when they are unripe, and so these two concepts coincide in Polish. As a note, they also do in Spanish and Japanese (well, except in Japanese they say blue for this concept).</p>
 
         <h3> Nouns - Rzeczowniki </h3>
 
