--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - 404 Not Found
+title: Polski Duo Notes - 404 Not Found
 ---
 
 <div class="blurb">
