--- a/lessons/basics/01_basics_1.html
+++ b/lessons/basics/01_basics_1.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - Polish basics 1
+title: Polski Duo Notes - Polish basics 1
 ---
 
 <div class="blurb">
