--- a/lessons/basics/02_basics_2.html
+++ b/lessons/basics/02_basics_2.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - Polish basics 2
+title: Polski Duo Notes - Polish basics 2
 ---
 
 <div class="blurb">
