--- a/lessons/basics/03_phrases.html
+++ b/lessons/basics/03_phrases.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - Basic Phrases
+title: Polski Duo Notes - Basic Phrases
 ---
 
 <div class="blurb">
