--- a/lessons/basics/07_demonstrating.html
+++ b/lessons/basics/07_demonstrating.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - Demonstrating
+title: Polski Duo Notes - Demonstrating
 ---
 
 <div class="blurb">
