--- a/lessons/checkpoint_1/13_possessive_pronouns.html
+++ b/lessons/checkpoint_1/13_possessive_pronouns.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Elisa's Duo Polski - Possessive Pronouns
+title: Polski Duo Notes - Possessive Pronouns
 ---
 
 <div class="blurb">
